--- a/package.json
+++ b/package.json
@@ -1,4 +1,27 @@
 {
-  "name": "application-name",
-  "version": "0.0.1"
+  "name": "jesidea-home",
+  "version": "0.0.1",
+  "dependencies": {},
+  "devDependencies": {
+    "gulp": "3.9.0",
+    "vinyl-ftp": "0.4.5",
+    "gulp-connect": "2.2.0",
+    "gulp-prompt": "0.1.2",
+    "gulp-util": "3.0.7",
+    "gulp-minify-css": "1.2.1",
+    "fs": "0.0.2",
+    "path": "0.12.7",
+    "gulp-uglify": "~1.4.2",
+    "gulp-imagemin": "~2.3.0",
+    "imagemin-pngquant": "~4.2.0",
+    "gulp-replace": "~0.5.4"
+  },
+  "keywords": [],
+  "repository": "",
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "http://opensource.org/licenses/MIT"
+    }
+  ]
 }
