--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
   "name": "jesidea-home",
   "version": "0.0.1",
-  "dependencies": {},
   "devDependencies": {
-    "gulp": "3.9.0",
-    "vinyl-ftp": "0.4.5",
-    "gulp-connect": "2.2.0",
-    "gulp-prompt": "0.1.2",
-    "gulp-util": "3.0.7",
-    "gulp-minify-css": "1.2.1",
     "fs": "0.0.2",
-    "path": "0.12.7",
-    "gulp-uglify": "~1.4.2",
+    "gulp": "3.9.0",
+    "gulp-connect": "2.2.0",
+    "gulp-filter": "^5.0.1",
+    "gulp-hash": "^4.1.1",
     "gulp-imagemin": "~2.3.0",
+    "gulp-minify-css": "1.2.1",
+    "gulp-prompt": "0.1.2",
+    "gulp-replace": "~0.5.4",
+    "gulp-rev": "^8.0.0",
+    "gulp-rev-replace": "^0.4.3",
+    "gulp-uglify": "~1.4.2",
+    "gulp-useref": "^3.1.2",
+    "gulp-util": "3.0.7",
     "imagemin-pngquant": "~4.2.0",
-    "gulp-replace": "~0.5.4"
+    "path": "0.12.7",
+    "run-sequence": "^2.1.0",
+    "vinyl-ftp": "0.4.5"
   },
   "keywords": [],
   "repository": "",
