--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
   "name": "jesidea-home",
   "version": "0.0.1",
+  "scripts": {
+    "start": "php -S localhost:8080",
+    "compile-styles:watch": "compass watch"
+  },
   "devDependencies": {
+    "@babel/core": "^7.11.4",
     "fs": "0.0.2",
+    "graceful-fs": "4.2.2",
     "gulp": "3.9.0",
+    "gulp-babel": "^8.0.0",
     "gulp-connect": "2.2.0",
     "gulp-filter": "5.0.1",
     "gulp-hash": "4.1.1",
@@ -14,6 +21,7 @@
     "gulp-rev": "8.0.0",
     "gulp-rev-replace": "0.4.3",
     "gulp-uglify": "1.4.2",
+    "gulp-uglify-es": "^2.0.0",
     "gulp-useref": "3.1.2",
     "gulp-util": "3.0.7",
     "imagemin-pngquant": "4.2.0",
@@ -28,5 +36,8 @@
       "type": "MIT",
       "url": "http://opensource.org/licenses/MIT"
     }
-  ]
+  ],
+  "dependencies": {
+    "jesidea-wc": "0.0.12"
+  }
 }
