--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "jesidea-home",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "scripts": {
     "start": "php -S localhost:8080",
+    "start:dev": "concurrently \"php -S localhost:8080\" \"compass watch\"",
     "compile-styles:watch": "compass watch"
   },
   "devDependencies": {
     "@babel/core": "^7.11.4",
+    "concurrently": "^5.3.0",
     "fs": "0.0.2",
     "graceful-fs": "4.2.2",
     "gulp": "3.9.0",
@@ -38,6 +40,6 @@
     }
   ],
   "dependencies": {
-    "jesidea-wc": "0.0.12"
+    "jesidea-wc": "0.0.17"
   }
 }
